# python-etcd3

./: Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: prgate.yaml
etcd3/: __init__.py  client.py  events.py  exceptions.py  leases.py  locks.py  members.py  transactions.py  utils.py  watch.py
etcd3/etcdrpc/: auth_pb2.py  auth_pb2.pyi  kv_pb2.py  kv_pb2.pyi  kv_pb2_grpc.pyi  rpc.proto  rpc_pb2.py  rpc_pb2.pyi  rpc_pb2_grpc.py  rpc_pb2_grpc.pyi
etcd3/v2/: channel.py  client.py  extended.py  lock.py  requests.py  watch.py
tests/: test_etcd3.py
