[tool.poetry]
name = 'etcd3'
version = '1.0.0'
description = 'Python client for the etcd3 API'
readme = ['README.rst', 'HISTORY.rst']
authors = ['Louis Taylor <louis@kragniz.eu>']
maintainers = ['Louis Taylor <louis@kragniz.eu>']
license = 'Apache Software License 2.0'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
#    'Programming Language :: Python :: 3.11'
]
keywords = []
homepage = 'https://github.com/kragniz/python-etcd3'
packages = [
    { include = 'etcd3' },
    { include = 'etcdrpc', from = 'etcd3' }
]
include = [
    'AUTHORS.rst',
    'CONTRIBUTING.rst',
    'HISTORY.rst',
    'LICENSE',
    'docs'
]

[tool.poetry.urls]
'Documentation' = 'https://github.com/kragniz/python-etcd3'
'Code' = 'https://github.com/kragniz/python-etcd3'
'Issue tracker' = 'https://github.com/kragniz/python-etcd3'

[tool.poetry.dependencies]
python = '>=3.8.1,<3.11'
grpcio = '<=1.44.0'
protobuf = '^3.20.3'
#python = '^3.8.1'  # 3.11 doesn't have wheels for grpc<1.46.0
#grpcio = '^1.51.1'  # '^1.51.1', grpc > 1.46.0 causes hanging in tests with Python < 3.10 https://github.com/grpc/grpc/issues/30843
#protobuf = '^4.21.12'  # '^4.21.12' - see grpc dependency

[tool.poetry.dev-dependencies]
bump2version = '^1.0.1'
flake8 = '^6.0.0'
flake8-docstrings = '^1.6.0'
flake8-import-order = '^0.18.2'
grpcio-tools = '1.44.0'
#grpcio-tools = '^1.51.1'  # '^1.51.1', grpc > 1.46.0 causes hanging in tests with Python < 3.10 https://github.com/grpc/grpc/issues/30843
hypothesis = '^6.61.0'
mock = '^4.0.3'
pifpaf = { git = 'https://github.com/jd/pifpaf.git', branch = 'master' }
pytest = '^7.2.0'
pytest-cov = '^4.0.0'
sphinx = '^5.3.0'
tenacity = '^8.1.0'

[tool.coverage.run]
branch = false
include = ['etcd3/*']

[tool.coverage.report]
show_missing = true

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
