[tool.poetry]
name = 'etcd3'
version = '1.0.0'
description = 'Python client for the etcd3 API'
readme = 'README.rst'
authors = ['Louis Taylor <louis@kragniz.eu>']
maintainers = ['Louis Taylor <louis@kragniz.eu>']
license = 'Apache Software License 2.0'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11'
]
keywords = []
homepage = 'https://github.com/kragniz/python-etcd3'
packages = [
    { include = 'etcd3' },
    { include = 'etcdrpc', from = 'etcd3' }
]
include = [
    'AUTHORS.rst',
    'CONTRIBUTING.rst',
    'HISTORY.rst',
    'LICENSE',
    'docs'
]

[tool.poetry.urls]
'Documentation' = 'https://github.com/kragniz/python-etcd3'
'Code' = 'https://github.com/kragniz/python-etcd3'
'Issue tracker' = 'https://github.com/kragniz/python-etcd3'

[tool.poetry.dependencies]
python = '^3.8.1'
grpcio = '^1.51.1'
protobuf = '^4.21.12'

[tool.poetry.dev-dependencies]
flake8 = '^6.0.0'
flake8-docstrings = '^1.6.0'
flake8-import-order = '^0.18.2'
grpc-stubs = '^1.24.11'
grpcio-tools = '^1.51.1'
hypothesis = '^6.61.0'
mock = '^4.0.3'
mypy = '^0.991'
mypy-protobuf = '^3.2.0'
pytest = '^7.2.0'
pytest-cov = '^4.0.0'
sphinx = '^5.3.0'
tenacity = '^8.1.0'
types-mock = '^4.0.15.2'

[tool.coverage.run]
branch = false
include = ['etcd3/*']

[tool.coverage.report]
show_missing = true

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ['etcd3.etcdrpc.*']
check_untyped_defs = false
disallow_untyped_defs = false

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
